Fix: Add Spring Boot Actuator for Railway healthcheck

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,17 +4,17 @@ spring.application.name=TouristeProject
 # Upload directory (use relative path for cloud deployment)
 upload.dir=uploads/
 
-# Database configuration (will be overridden by Railway environment variables)
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/touristproject}
-spring.datasource.username=${DB_USERNAME:postgres}
+# Database configuration (will be overridden by cloud environment variables)
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/touristproject}
+spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:password}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Server configuration
 server.port=${PORT:8080}
@@ -40,3 +40,5 @@ spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT
 # Security
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+management.server.port=${PORT:8080}
+server.port=${PORT:8080}
