Fix: Update database configuration for PostgreSQL compatibility

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,13 +8,14 @@ upload.dir=uploads/
 spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/touristproject}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Server configuration
 server.port=${PORT:8080}
@@ -42,3 +43,9 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 management.server.port=${PORT:8080}
 server.port=${PORT:8080}
+
+# Debug logging
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+spring.jpa.show-sql=true
