--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,9 +5,7 @@ spring.application.name=TouristeProject
 upload.dir=uploads/
 
 # Database configuration (will be overridden by cloud environment variables)
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/touristproject}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:password}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -41,8 +39,6 @@ spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT
 # Security
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
-management.server.port=${PORT:8080}
-server.port=${PORT:8080}
 
 # Debug logging
 logging.level.org.springframework=DEBUG
