Fix: Add HomeController for root endpoint and configure server binding

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,6 +17,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Server configuration
 server.port=${PORT:8080}
+server.address=0.0.0.0
 
 # Swagger configuration
 springdoc.swagger-ui.enabled=true
@@ -34,14 +35,12 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID:your-google-client-id}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET:your-google-client-secret}
 spring.security.oauth2.client.registration.google.scope=profile, email
-spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI:https://web-production-7c5cd.up.railway.app/login/oauth2/code/google}
 
 # Security
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 
-# Debug logging
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
-spring.jpa.show-sql=true
+# Logging (reduced for production)
+logging.level.org.springframework=INFO
+logging.level.com.zaxxer.hikari=INFO
