Debug: Add database connection logging and test endpoint

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,11 +9,12 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 # Server configuration
 server.port=${PORT:8080}
@@ -41,6 +42,9 @@ spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 
-# Logging (reduced for production)
+# Logging (debug database issues)
 logging.level.org.springframework=INFO
-logging.level.com.zaxxer.hikari=INFO
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
