Debug: Temporarily exclude database auto-configuration to test startup

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,13 +8,12 @@ upload.dir=uploads/
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+# JPA Configuration - Simplified for debugging
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
 # Server configuration
 server.port=${PORT:8080}
