--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "java -jar target/TouristeProject-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod"
+startCommand = "java -jar target/TouristeProject-0.0.1-SNAPSHOT.jar"
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
